--- a/Examenes/Proyecto/package.json
+++ b/Examenes/Proyecto/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Proyecto final CursoJS",
   "main": "index.js",
-  "config":{
+  "config": {
     "port": "8080"
   },
   "scripts": {
@@ -17,6 +17,7 @@
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^3.3.7",
-    "express": "^4.15.4"
+    "express": "^4.15.4",
+    "highcharts": "^5.0.14"
   }
 }
